# yaqti

./: .gitignore  action.yml  pyproject.toml  readme.md  requirements.txt
.github/workflows/: publish_to_pip.yml  unit_tests.yml  yapf_check.yml
test/: __init__.py  test_fetchers.py  test_helpers.py  test_main.py
yaqti/: __main__.py  fetchers.py  helpers.py  packages.py
